fix footer on mobile

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -66,11 +66,14 @@ footer
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: auto;
+    height: 300px;
     position: relative;
     }
     .openCloseFooter{
       display: none;
+    }
+    footer:hover{
+      height: 300px;
     }
 
   
